--- a/unified_biquaternion_theory_2.0/appendix_d_qed_consolidated.tex
+++ b/unified_biquaternion_theory_2.0/appendix_d_qed_consolidated.tex
@@ -1,4 +1,3 @@
-
 \appendix
 \section*{Appendix D: Quantum Electrodynamics (QED) in the Unified Biquaternion Theory}
 \addcontentsline{toc}{section}{Appendix D: Quantum Electrodynamics (QED) in the Unified Biquaternion Theory}
@@ -166,3 +165,60 @@ Renormalization & Preserved in QED limit & $\psi$-terms renormalize to zero \\
 
 \subsection*{Concluding Remarks}
 QED is fully recovered as the $\psi=\mathrm{const}$ limit of the UBT electromagnetic sector. The UBT extension provides a controlled way to explore small, phase-mediated deviations without spoiling the extraordinary agreement of QED with experiment. Dedicated resonator setups and precision spectroscopy are the natural arenas to test the predicted effects.
+
+\section{UBT Extension of QED}
+
+In the framework of the Unified Biquaternion Theory (UBT), Quantum Electrodynamics (QED) is naturally embedded within a richer algebraic and geometric structure. The standard space-time coordinates are extended into a \emph{complex time} manifold
+\begin{equation}
+\tau = t + i \psi \,,
+\end{equation}
+where \(t\) is the conventional temporal coordinate and \(\psi\) is the \emph{phase-time} coordinate associated with consciousness and topological phase structure.  
+
+The electromagnetic field is promoted from the classical 4-potential \(A_\mu\) to a \emph{biquaternionic field} \(\Theta(q,\tau)\), where
+\begin{equation}
+q \in \mathbb{B} \,, \quad \tau \in \mathbb{C} \,,
+\end{equation}
+and \(\mathbb{B}\) denotes the biquaternion algebra. This field can be expanded as
+\begin{equation}
+\Theta(q,\tau) = \sum_{\alpha=0}^3 e_\alpha \, \Theta^\alpha(q,\tau) \,,
+\end{equation}
+with \(e_\alpha\) forming the quaternionic basis and \(\Theta^\alpha\) complex scalar functions.
+
+The conventional QED Lagrangian
+\begin{equation}
+\mathcal{L}_{\mathrm{QED}} = \bar{\psi}(i\gamma^\mu D_\mu - m)\psi - \frac14 F_{\mu\nu}F^{\mu\nu}
+\end{equation}
+is generalized to
+\begin{equation}
+\mathcal{L}_{\mathrm{UBT-QED}} = \bar{\Psi} \left[ i \Gamma^A \nabla_A - M \right] \Psi - \frac14 \mathcal{F}_{AB} \mathcal{F}^{AB} + \mathcal{L}_{\mathrm{psychon}} + \mathcal{L}_{\mathrm{int}} \,,
+\end{equation}
+where:
+\begin{itemize}
+    \item Indices \(A,B\) run over the extended complex-time manifold,
+    \item \(\Gamma^A\) are generalized gamma matrices compatible with the biquaternionic structure,
+    \item \(\mathcal{F}_{AB} = \nabla_A \mathcal{A}_B - \nabla_B \mathcal{A}_A\) is the extended field strength,
+    \item \(\mathcal{L}_{\mathrm{psychon}}\) encodes the dynamics of \emph{psychons} — quanta of consciousness phase,
+    \item \(\mathcal{L}_{\mathrm{int}}\) describes couplings between electromagnetic fields and psychons.
+\end{itemize}
+
+A minimal coupling term to psychons can be written as
+\begin{equation}
+\mathcal{L}_{\mathrm{int}} = - g_\psi \, J^\psi_A \, \mathcal{A}^A \,,
+\end{equation}
+where \(g_\psi\) is the coupling constant in the phase-time direction and \(J^\psi_A\) is the psychon current.
+
+Gauge invariance is preserved under the transformation
+\begin{equation}
+\Theta(q,\tau) \mapsto e^{i \Lambda(q,\tau)} \, \Theta(q,\tau) \,,
+\end{equation}
+with \(\Lambda(q,\tau)\) a biquaternion-valued gauge function. In the special case where \(\Lambda\) depends only on \(\psi\), this corresponds to a pure phase-time gauge transformation, potentially observable through shifts in interference patterns or quantum phase measurements.
+
+\paragraph{Interpretation.} Within UBT, the \(\Theta\) field is more than a gauge field — it represents the \emph{principle of the Universe}, encapsulating both physical interactions and the phase structure of consciousness. In this light, QED appears as the \(U(1)\) projection of a deeper biquaternionic gauge symmetry.
+
+\paragraph{Predictions and Experimental Tests.}
+Potential measurable effects include:
+\begin{itemize}
+    \item Small deviations in electron anomalous magnetic moment \(a_e\) due to psychon coupling.
+    \item Phase anomalies in long-baseline interferometry sensitive to \(\psi\)-dependent gauge phases.
+    \item Modifications to vacuum birefringence in strong-field QED experiments.
+\end{itemize}
