--- a/unified_biquaternion_theory_2.0/old/appendix_G_dark_matter_unified_padic.tex
+++ b/unified_biquaternion_theory_2.0/old/appendix_G_dark_matter_unified_padic.tex
@@ -582,3 +582,39 @@ We conclude that topologically neutral solutions in UBT provide a compelling, ge
 \end{itemize}
 
 \end{document}
+
+\subsection{P-adická extenze temné hmoty}
+
+V rámci rozšíření UBT teorie je přirozené uvažovat \emph{p-adickou extenzi} topologických módů
+temné hmoty, které jsou popsány polem $\Theta(q,\tau)$. Každé prvočíslo $p$ definuje oddělený
+p-adický sektor, v němž je definována p-adická verze Jacobiho theta funkce:
+
+\begin{equation}
+\Theta_p(q,\tau) = \sum_{n \in \mathbb{Z}} \exp_p\!\left( \pi i\, p^\alpha (n+q)^2 \tau \right),
+\end{equation}
+
+kde $\exp_p$ značí p-adickou exponenciální funkci a $\alpha$ je škálovací exponent určený
+strukturou daného sektoru.
+
+Každý p-adický sektor lze interpretovat jako \emph{oddělený temný sektor} multivesmíru,
+v němž mohou existovat hopfionové a jiné topologické excitace, avšak interakce mezi různými
+$p$-sektory jsou extrémně potlačeny v důsledku neslučitelnosti jejich p-adických metrik.
+
+\paragraph{Příklad: $p=137$ a $p=139$.}
+Pro dva konkrétní sektory odpovídající prvočíslům $137$ a $139$ lze odhadnout poměr
+energetických hustot z poměru prvních nenulových koeficientů Fourierovy expanze
+$\Theta_p(q,\tau)$ pro $q=0$ a čistě imaginární $\tau = i\beta$:
+
+\begin{equation}
+R_{137,139}(\beta) \approx \frac{\Theta_{137}(0,i\beta) - 1}{\Theta_{139}(0,i\beta) - 1}.
+\end{equation}
+
+Numerická evaluace pro $\beta \sim 1$ ukazuje, že $R_{137,139} \ll 1$, což naznačuje,
+že sektor $p=139$ může mít výrazně nižší energetickou hustotu než sektor $p=137$
+v daných kosmologických podmínkách.
+
+\paragraph{Experimentální implikace.}
+Ladění toroidálního rezonátoru na konkrétní p-adický mód by vyžadovalo fázovou modulaci
+odpovídající $p$-adické periodicity, což otevírá možnost selektivní detekce konkrétních
+temných sektorů. To by mohlo vést k rozlišení různých p-adických složek temné hmoty
+a testování hypotézy multivesmíru s p-adickou strukturou.
