--- a/unified_biquaternion_theory_2.0/ubt_2_main.tex
+++ b/unified_biquaternion_theory_2.0/ubt_2_main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath,amssymb,amsfonts}
-\usepackage{hyperref}
 \usepackage{geometry}
+\usepackage{hyperref}
 \geometry{a4paper, margin=1in}
 
 \title{Unified Biquaternion Theory 2.0 (Consolidated)}
@@ -12,15 +12,10 @@
 \maketitle
 \tableofcontents
 
-\section{Overview}
-This consolidated version reduces duplication and places each major topic into a single appendix with rigorous derivations and consistent notation.
-
 \appendix
 \input{appendix_A_alpha_consolidated}
 \input{appendix_B_electromagnetism_consolidated}
 \input{appendix_C_lepton_masses_consolidated}
-\input{appendix_F}
-\input{appendix_G}
-\input{appendix_H}
-
+\input{appendix_E_SM_QCD_embedding}
+\input{appendix_G_dark_matter_unified_padic}
 \end{document}
