--- a/unified_biquaternion_theory_2.0/ubt_2_main.tex
+++ b/unified_biquaternion_theory_2.0/ubt_2_main.tex
@@ -18,4 +18,8 @@
 \input{appendix_C_lepton_masses_consolidated}
 \input{appendix_E_SM_QCD_embedding}
 \input{appendix_G_dark_matter_unified_padic}
+\input{appendix_V_visual_maps}
+\input{appendix_K_fundamental_constants_consolidated}
+\input{appendix_P_bibliography}
+\input{appendix_O_padic_overview}
 \end{document}
